# libiqxmlrpc

./: .clang-format  .clang-tidy  .gitignore  .mcp.json  BACKLOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  COMPATIBILITY_TESTING_PLAN.md  License  NEWS  PERFORMANCE_REVIEW.md  README  SECURITY_IMPROVEMENTS_PLAN.md  SERVER_PERFORMANCE_REVIEW.md  WIKI_SETUP_INSTRUCTIONS.md  codecov.yml  libiqxmlrpc.pc.in
.github/: dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  codeql.yml  coverity.yml
doc/samples/: client.cc  server.cc
docs/: BUG_REPORT.md  CI_TROUBLESHOOTING.md  CODE_REVIEW_BUGS.md  CODE_REVIEW_CHECKLIST.md  CODE_SIMPLIFICATION.md  CODING_STANDARDS.md  COVERAGE_GUIDE.md  COVERITY_SETUP.md  CPP_STYLE.md  DEBUGGING.md  HARDENING_GUIDE.md  PERFORMANCE_GUIDE.md  PERFORMANCE_OPTIMIZATION_LOG.md  PROJECT_RULES.md  SECURITY_CHECKLIST.md  SECURITY_FINDINGS_2026.md  SSL_TESTING.md
docs/plans/: 2026-02-01-security-bug-hunt-findings.md  2026-02-05-perf-optimizations-design.md
fuzz/: CMakeLists.txt  Dockerfile  README.md  build.sh  dispatcher.dict  fuzz_base64.cc  fuzz_common.h  fuzz_dispatcher.cc  fuzz_http.cc  fuzz_inet_addr.cc  fuzz_num_conv.cc  fuzz_packet.cc  fuzz_request.cc  fuzz_response.cc  fuzz_serialize.cc  fuzz_value.cc  fuzz_xheaders.cc  http.dict  inet_addr.dict  project.yaml  test_harness.cc  xml.dict
fuzz/corpus/base64/: embedded_crlf.txt  malformed_invalid_char.txt  malformed_truncated.txt  rfc2045_linebreaks.txt  urlsafe_no_padding.txt  urlsafe_standard.txt  urlsafe_with_padding.txt  valid_long.txt  with_null_byte.txt  with_whitespace.txt
fuzz/corpus/dispatcher/: echo.xml  listmethods.xml
fuzz/corpus/http/: expect_continue.txt  get_request.txt  h2c_upgrade.txt  header_injection.txt  http09_response.txt  http09_simple.txt  http09_with_query.txt  post_request.txt  response_200.txt  smuggle_cl_te.txt  smuggle_double_cl.txt  smuggle_te_cl.txt  unicode_host.txt  websocket_upgrade.txt  with_auth.txt
fuzz/corpus/inet_addr/: crlf_injection.txt
fuzz/corpus/packet/: cl_mismatch_short.txt  cl_mismatch_zero.txt  full_request.txt  full_response.txt  http09_response_packet.txt
fuzz/corpus/request/: all_types.xml  billion_laughs.xml  datetime_edge.xml  deep_array.xml  deep_struct.xml  depth_30_array.xml  depth_31_struct.xml  simple_call.xml  unicode_bidi.xml  unicode_homoglyph.xml  unicode_zwc.xml  with_params.xml  xinclude_attempt.xml  xxe_attempt.xml  xxe_parameter_entity.xml
fuzz/corpus/response/: fault.xml  fault_edge.xml  fault_empty.xml  fault_long_string.xml  fault_missing_code.xml  fault_missing_string.xml  fault_wrong_type.xml  unicode_bidi.xml  unicode_homoglyph.xml  unicode_zwc.xml
fuzz/corpus/value/: all_scalars.xml  deep_mixed.xml  depth_30_value.xml  empty_containers.xml  int_value.xml  large_array.xml  large_struct.xml  nested_struct.xml  unicode_bidi.xml  unicode_homoglyph.xml  unicode_zwc.xml
libiqxmlrpc/: CMakeLists.txt  acceptor.cc  acceptor.h  api_export.h  auth_plugin.h  builtins.h  client.cc  client.h  client_conn.cc  client_conn.h  client_opts.h  conn_factory.h  connection.cc  connection.h  connector.cc  connector.h  dispatcher_manager.cc  dispatcher_manager.h  except.h  executor.cc  executor.h  firewall.cc  firewall.h  http.cc  http.h  http_client.cc  http_client.h  http_errors.h  http_server.cc  http_server.h  https_client.cc  https_client.h  https_server.cc  https_server.h  inet_addr.cc  inet_addr.h  libiqxmlrpc.h  lock.h  method.h  net_except.cc  (+48 more)
scripts/: benchmark_utils.py  compare_benchmarks.py  compare_versions.sh  local_benchmark_compare.sh  rps_benchmark.py  select_minimum_results.py  test_benchmark_scripts.py
tests/: CMakeLists.txt  benchmark_server.cc  client.cc  client_common.cc  client_common.h  client_opts.cc  client_opts.h  client_stress.cc  methods.cc  methods.h  parser2.cc  perf_utils.h  performance_baseline.txt  server_config.cc  server_config.h  test_base64_benchmark.cc  test_common.h  test_coverage_gaps.cc  test_crlf_injection.cc  test_e1_e3_optimization.cc  test_exceptions.cc  test_http.cc  test_http_tokenize_benchmark.cc  test_inet_addr.cc  test_integration.cc  test_integration_advanced.cc  test_integration_client.cc  test_integration_common.h  test_integration_connection.cc  test_integration_errors.cc  test_integration_reactor.cc  test_integration_security.cc  test_integration_server.cc  test_integration_ssl.cc  test_method_dispatch.cc  test_num_conv.cc  test_perf_utils.cc  test_performance.cc  test_performance_e1_e3.cc  test_performance_m1_m4.cc  (+19 more)
tests/interop/: python_xmlrpc_server.py  run_interop_tests.sh
wiki_content/: Building.md  Home.md  Performance-Results.md  Quick-Start.md  Whats-New.md
